--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 3</h2>
-									<p>Description of the third project of the semester.</p>
+									<p>3D printing and scanning</p>
 									<ul class="actions">
 										<li><a href="project3.html" class="button">Check it out</a></li>
 									</ul>
@@ -93,7 +93,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 4</h2>
-									<p>Group project.</p>
+									<p>My contribution - Group project part 1</p>
 									<ul class="actions">
 										<li><a href="project4.html" class="button">Check it out</a></li>
 									</ul>
@@ -105,7 +105,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 5</h2>
-									<p>Group project.</p>
+									<p>My contribution - Group project part 2</p>
 									<ul class="actions">
 										<li><a href="project5.html" class="button">Check it out</a></li>
 									</ul>
@@ -117,7 +117,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Project 6</h2>
-									<p>Group project.</p>
+									<p>Final project</p>
 									<ul class="actions">
 										<li><a href="project6.html" class="button">Check it out</a></li>
 									</ul>
