--- a/project2.html
+++ b/project2.html
@@ -32,7 +32,7 @@
                         <li><a href="project3.html">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
-                        <li><a href="project6">Project 6</a></li>
+                        <li><a href="project6">Final Project</a></li>
                         <li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
