--- a/project4.html
+++ b/project4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Að fræsa eitthvað stórt</title>
+		<title>Cutting with Shopbot</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- ICON - Chrome -->
@@ -32,7 +32,7 @@
                         <li><a href="project3.html">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
-                        <li><a href="project6">Project 6</a></li>
+                        <li><a href="project6">Final project</a></li>
                         <li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
@@ -49,8 +49,8 @@
                             Meðlimir hópsins eru Andri Dagur Ófeigsson, Björg Eva Steinþórsdóttir og Guðrún Karitas Blomsterberg.
                             <hr/>
                             <h2>Verkefnið</h2>
-							<p>Fyrsta hópverkefni annarinnar felst í því að hanna, teikna og fræsa stóran hlut í XXXXX.</p>
-                            <h4>Tafla 1: Vinnuframlag</h4>
+							<p>Fyrsta hópverkefni annarinnar felst í því að hanna, teikna og fræsa stóran hlut í Shopbot.</p>
+                            <h4>Tafla 1: Vinnuframlag - Að fræsa eitthvað stórt</h4>
 									<div class="table-wrapper">
 										<table class="alt">
 											<thead>
@@ -123,9 +123,9 @@
                             <h2>Hugmyndavinna</h2>
                             <p>Hópurinn ákvað að hanna og fræsa einhverskonar húsgagn. Leitað var á netinu að hugmyndum og önnur Fablab verkefni skoðuð. Niðurstaðan var sú að hanna einhverskonar hliðarborð með tveimur hillum. Fyrirmynd verkefnisins er borð frá merkinu Norman Copenhagen sem fæst í Epal. </p>
                             <img src="images/v5/inspo.png" alt="" width="300" height="310">
-                            <p>Leitarorð notuð við hugmyndavinnu og framkvæmd: <i>ablab furniture, diy furniture, side table, vagn húsgögn, sófaborð.</i>.</p>
+                            <p>Leitarorð notuð við hugmyndavinnu og framkvæmd: <i>fablab furniture, diy furniture, side table, vagn húsgögn, sófaborð.</i>.</p>
                             <hr/>
-                            <h2>Hönnun</h2>
+                            <h2>Hönnun hliðarborðs</h2>
                             <p>Byrjað var á að áætla stærð hlutarins og í framhaldi teiknaðar upp hugmyndir að pörtunum sem þarf í verkefnið. </p>
                             <p>Áætlanir voru gerðar fyrir öll málin á borðinu. Í töflu hér að neðan má sjá niðurstöður þess.  </p>
                             <h4>Tafla 2: Áætlun mála</h4>
@@ -164,16 +164,16 @@
                             <p>Ákveðið var í samráði við kennara að nota tvær plötuþykktir (18mm*2) í fætur borðsins, til þess að auka stöðugleika. Til þess að nota hvorki lím né skrúfur voru því næst hannaðar festingar til að halda helmingum fótanna saman. Fyrstu hugmyndir af festingum fyrir hillurnar kröfðust þess að stór göt væru á botnum hillanna.<p/>
                             <img src="images/v5/gomlufaetur.png" alt="" width="300" height="350">
                             <p>Þessu var í framhaldi breytt þannig að aðeins þurfi gat á stærð við fæturnar. Hér að neðan má sjá hvernig hópurinn sá fyrir sér festingarnar sem ákveðið var að nota bæði að ofan og neðan.</p>
-                            <img src="images/v5/teiknfesting.png" alt="" width="400" height="310">
+                            <img src="images/v5/teiknfesting.png" alt="" width="400" height="250">
                             <p> Festingarnar fyrir hillurnar var ákveðið að útfæra eins og nagla eða þess háttar, sem standa út úr fótunum og hillurnar geta setið á. Hér að neðan má sjá hvernig hópurinn sá fyrir sér festingarnar.</p>
-                            <img src="images/v5/teiknnagli.png" alt="" width="400" height="310">
+                            <img src="images/v5/teiknnagli.png" alt="" width="300" height="450">
                             <hr/>
                             <h2>Teiknað í Fusion360</h2>
                             <p>Fyrsta skrefið var að teikna hillurnar sem eru í raun opnir kassar með finger-joints. Myndband sem notað var sem fyrirmynd má sjá hér að neðan. </p>
                             <ul class="actions fit small">
                                 <li><a href="https://www.youtube.com/watch?v=9U2JPfkQpsE" class="button primary fit" target="_blank">Finger joints: Fusion 360</a></li></ul>
                             <p>Hillurnar tvær eru nákvæmlega eins og því verður sama hilla skorin út tvisvar sinnum.</p>
-                            <span class="image"><img src="images/v5/hillafusion.png" alt="" /></span>
+                            <img src="images/v5/hillafusion.png" alt="" width="400" height="310">
                             <p>Því næst voru fætur borðsins teiknaðir, þar sem áætla þurfti stærð þeirra áður en staðsetning gatanna í botni hillanna voru ákveðnar.
                             <p>Þegar búið var að áætla stærð fótanna var götum bætt við fyrir festingarnar, bæði fyrir þær sem koma til með að vera á toppi og botni sem og þær sem munu halda uppi hillunum. </p>
                             <img src="images/v5/faetur.png" alt="" width="250" height="310">
@@ -185,20 +185,19 @@
                             <img src="images/v5/festingNagli.png" alt="" width="400" height="310">
                             <p>Lokaútkomu teikningar má sjá hér að neðan.</p>
                             <img src="images/v5/lokautkoma.png" alt="" width="400" height="310">
-                            <h2>Undirbúningur fyrir fræsingu</h2>
+                            <h2>Undirbúningur fyrir fræsingu og VCarve</h2>
                             <p>Þegar teikningu hefur verið lokið þarf að gera útflatning af öllum pörtum hennar. Það er gert með því að nota Align skipunina og leggja alla parta á x planið.</p>
-                            <p>The file is transferred to the laser-cutter's assigned computer via USB. Before starting the cutting process the laser has to be adjusted along the x-, y- and z- axis as well as set to cut, not carve. Below is a photo of the manual focus tool, used to adjust the z-axis and following are the speed, power and frequency settings used to cut plywood.</p>
-                            <div class="box alt">
-								<div class="row gtr-uniform">
-                                    <div class="col-4"><span class="image fit"><img src="images/manual_focus_tool.jpg" alt="" /></span></div>
-                                    <div class="col-6"><span class="image fit"><img src="images/laser_settings.jpg" alt="" /></span></div>
-                                </div>
-                            </div>
-                            
-                            <p>The x- and y-axis are then adjusted with a kind of a joystick, and then the cutting is started. The control board of the laser can be seen below.</p>
-                            <img src="images/laser_start.jpg" alt="" width="350" height="300">
-                            <hr/>
-                            <h2>Undirbúningur í VCarve</h2>
+                            <img src="images/v5/utflatningur.png" alt="" width="400" height="310">
+                            <p>Teikningin er exportuð og vistuð sem *.dxf skrá. Í framhaldinu er skráin opnuð í VCarve. Þar eru partarnir afritaðir og fjölda hvers parts sem þarf í verkefnið stillt upp eins og sjá má hér að neðan.</p>
+                            <img src="images/v5/uppsetningVCarve.png" alt="" width="400" height="310">
+                            <p>Þá þarf að setja “fillet” á öll horn í innskotum, þar sem fræsirinn getur ekki gert skörp horn. Í VCarve er tól fyrir þetta og notast er við T-Bone fillet með 3mm radíus. Frekari upplýsingar um þessar stillingar og aðferðir má sjá í myndbandi frá kennara námskeiðsins, ef smellt er á takkann. Í myndbandinu má einnig sjá hvernig VCarve í tölvunni þar sem teiknað var er tengt við VCarve í Fablab, þar sem fræsingin mun fara fram.</p>
+                            <ul class="actions fit small">
+                                <li><a href="https://www.youtube.com/watch?v=wGDx5PD0nTc" class="button primary fit" target="">VCarve: Undirbúningur</a></li></ul>
+                            <p>Stilla þarf stærð plötunnar sem verður notuð, þ.e. lengd, breidd og þykkt. </p>
+                            <img src="images/v5/efnisstillingar.png" alt="" width="300" height="140">
+                            <p>Að lokum þarf að stilla feeds and speeds og toolpaths eins og myndbandið að ofan segir einnig til um. Hér að neðan má sjá þær stillingar sem settar eru inn fyrir verkefnið ásamt öllum þeim toolpaths sem settar eru inn, en þær eru sex talsins.</p>
+                            <img src="images/v5/fraesistillingar.png" alt="" width="750" height="400">
+                            <img src="images/v5/toolpaths.png" alt="" width="750" height="400">
                             <hr/>
                             <h2>Fræsing</h2>
                             <hr/>
