--- a/project6.html
+++ b/project6.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Final project</title>
+		<title>Final Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- ICON - Chrome -->
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Björg Eva Steinþórsdóttir</a>
+				<a href="index.html" class="title">Andri, Björg og Guðrún</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -32,7 +32,7 @@
                         <li><a href="project3.html">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
-                        <li><a href="project6">Final project</a></li>
+                        <li><a href="project6">Final Project</a></li>
                         <li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
@@ -48,7 +48,7 @@
                             <p>Lokaverkefni áfangans samanstendur af því að fræsa stóran hlut úr krossvið í Shopbot fræsi og að fræsa út mót til þess að steypa hlut sem hópurinn hannar.</p>
                             <hr/>
                             <h3>Hópurinn</h3>
-                            <p>Meðlimir hópsins eru Andri Dagur Ófeigsson, Björg Eva Steinþórsdóttir og Guðrún Karitas Blomsterberg.</p>
+                            <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
                             <hr/>
                             <h4>Tafla 1: Vinnuframlag - Að fræsa eitthvað stórt</h4>
 									<div class="table-wrapper">
