--- a/project2.html
+++ b/project2.html
@@ -243,6 +243,9 @@
                             <img src="images/fixing_bent.jpg" alt="" width="300" height="350">
                             <p>The result was better than expected and the steps came together in the end. The process was inspiring and I learnt alot of new things. A few ideas of fun projects came to the surface, that might even be realized in the future.  </p>
                             <img src="images/steps_finished.jpg" alt="" width="360" height="350">
+                            <p>By clicking the button below you can download the design. The file name is Tjuggatrappa.dxf.</p>
+                            <ul class="actions fit small">
+                                <li><a href="https://bjorgeva.github.io/website_project/Tjuggatrappa.dxf" class="button primary fit" target="_blank">Download the file</a></li></ul>
 						</div>
 					</section>
 
