--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Project 1 - Making a website</h2>
+									<h2>Project 1</h2>
 									<p>How this website was made - a guide for how to make one yourself!</p>
 									<ul class="actions">
 										<li><a href="project1.html" class="button">Check it out</a></li>
