--- a/project6.html
+++ b/project6.html
@@ -78,7 +78,7 @@
 												</tr>
 												<tr>
 													<td>Teikning í Fusion 360</td>
-													<td>3</td>
+													<td>5</td>
                                                     <td>GKB</td>
 												</tr>
 												<tr>
@@ -249,7 +249,8 @@
                             <img src="images/v5/festingNagli.png" alt="" width="400" height="310">
                             <p>Lokaútkomu teikningar má sjá hér að neðan.</p>
                             <img src="images/v5/lokautkoma.png" alt="" width="450" height="450">
-                            <p>Ef smellt er á takkann hér að neðan er *.dxf skrá hönnunarinnar hlaðið niður.</p>
+                            <h2>Hönnunarskjöl</h2>
+                            <p>Hér að neðan má finna *.dxf skrá hönnunarinnar, ef smellt er á takkann er hefst niðurhal.</p>
                             <ul class="actions fit small">
                                 <li><a href="https://bjorgeva.github.io/website_project/hopverkefni_bord_samsetning.dxf" class="button primary fit" target="">Hönnunarskjöl - Hliðarborð</a></li></ul>
                             <hr/>
@@ -363,9 +364,11 @@
                             <video width="500" height="300" controls>
                             <source src="images/v6/toolvideo.mp4" type="video/mp4">
                             </video>
-                            <p>Hér má finna hönnunarskjöl á *.dxf formi.</p>
+                            <hr/>
+                            <h2>Hönnunarskjöl</h2>
+                            <p>Hér má finna hönnunarskjöl á *.dxf formi, ef smellt er á takkann hefst niðurhal.</p>
                             <ul class="actions fit small">
-                                <li><a src="kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjöl - Mót</a></li></ul>
+                                <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjöl - Mót</a></li></ul>
                             <hr/>
                         </div>
                            
