--- a/project6.html
+++ b/project6.html
@@ -246,7 +246,7 @@
                             <p>Að lokum eru festingarnar teiknaðar, miðað við stærðir gatanna. Festingunni ofan og neðan á fótum borðsins er ætlað að liggja jafnt endum fótanna, svo hún virki sem hluti af þeim. </p>
                             <img src="images/v5/festingU.png" alt="" width="400" height="310">
                             <p>Festingin sem heldur uppi hillunum virkar eins og nagli, en hún hefur haus sem passar að hún gangi ekki of langt inn í fótinn og gerir hillunni kleift að sitja ofan á henni. </p>
-                            <img src="images/v5/festingNagli.png" alt="" width="400" height="310">
+                            <img src="images/v5/festingnagli.png" alt="" width="400" height="310">
                             <p>Lokaútkomu teikningar má sjá hér að neðan.</p>
                             <img src="images/v5/lokautkoma.png" alt="" width="450" height="450">
                             <hr/>
@@ -371,6 +371,7 @@
                             <ul class="actions fit small">
                                 <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjöl - Mót</a></li></ul>
                             <hr/>
+                            <p>Hér lýkur framkvæmd verkefnisins, en gaman væri að framkvæma fræsingu og að steypa í mót við tækifæri, þar sem ekki gafst tími til þess innan áfangans.</p>
                         </div>
                            
                             
