--- a/project6.html
+++ b/project6.html
@@ -118,7 +118,7 @@
 												</tr>
                                                 <tr>
                                                     <td><b>Heildarvinnuframlag</b></td>
-													<td><b>48</b></td>
+													<td><b>50</b></td>
                                                     <td></td>
                                                 </tr>
                                              </tbody>
@@ -250,11 +250,6 @@
                             <p>Lokaútkomu teikningar má sjá hér að neðan.</p>
                             <img src="images/v5/lokautkoma.png" alt="" width="450" height="450">
                             <hr/>
-                            <h2>Hönnunarskjöl</h2>
-                            <p>Hér að neðan má finna *.dxf skrá hönnunarinnar, ef smellt er á takkann er hefst niðurhal.</p>
-                            <ul class="actions fit small">
-                                <li><a href="https://bjorgeva.github.io/website_project/hopverkefni_bord_samsetning.dxf" class="button primary fit" target="">Hönnunarskjöl - Hliðarborð</a></li></ul>
-                            <hr/>
                             <h2>Undirbúningur fyrir fræsingu og VCarve</h2>
                             <p>Þegar teikningu hefur verið lokið þarf að gera útflatning af öllum pörtum hennar. Það er gert með því að nota Align skipunina og leggja alla parta á x planið.</p>
                             <img src="images/v5/utflatningur.png" alt="" width="400" height="310">
@@ -367,9 +362,13 @@
                             </video>
                             <hr/>
                             <h2>Hönnunarskjöl</h2>
-                            <p>Hér má finna hönnunarskjöl á *.dxf formi, ef smellt er á takkann hefst niðurhal.</p>
+                            <p>Hér má finna hönnunarskjöl borðsins og kertastjakans á *.dxf formi, ásamt *.crv skjali fyrir hliðarborðið. Ef smellt er á takkann hefst niðurhal.</p>
                             <ul class="actions fit small">
-                                <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjöl - Mót</a></li></ul>
+                                <li><a href="https://bjorgeva.github.io/website_project/hopverkefni_bord_samsetning.dxf" class="button primary fit" target="">Hönnunarskjal - Hliðarborð</a></li></ul>
+                            <ul class="actions fit small">
+                                <li><a href="https://bjorgeva.github.io/website_project/hlidarbord.crv" class="button primary fit" target="">Hönnunarskjal úr VCarve - Hliðarborð</a></li></ul>
+                            <ul class="actions fit small">
+                                <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjal - Mót</a></li></ul>
                             <hr/>
                             <p>Hér lýkur framkvæmd verkefnisins, en gaman væri að framkvæma fræsingu og að steypa í mót við tækifæri, þar sem ekki gafst tími til þess innan áfangans.</p>
                         </div>
