--- a/project6.html
+++ b/project6.html
@@ -293,7 +293,7 @@
                             </div>
                             <p>Hér má sjá ryksugu sem tengd er fræsinum.</p>
                             <img src="images/v6/frasog.jpg" alt="" width="400" height="540">
-                            <p>Þegar listinn hefur verið athugaður og fræsirinn hitnað er hann núllstilltur á x-, y- og z- ás. Það er gert með því að færa fræsitönn á núllpunkt x- og y- ása með örvatökkum á lyklaborði og smella svo á Zero Axes í stýrikerfi. Aðeins er valið að núlltilla x- og y. Því næst er þess til gerð plata staðsett undir fræsitönn og valið er að núllstilla z-ás. Þegar því er lokið er plötunni skilað. Hér má sjá stýrikerfi fræsisins.</p>
+                            <p>Þegar listinn hefur verið athugaður og fræsirinn hitnað er hann núllstilltur á x-, y- og z- ás. Það er gert með því að færa fræsitönn á núllpunkt x- og y- ása með örvatökkum á lyklaborði og smella svo á Zero Axes í stýrikerfi. Aðeins er valið að núllstilla x- og y. Því næst er þess til gerð plata staðsett undir fræsitönn og valið er að núllstilla z-ás. Þegar því er lokið er plötunni skilað. Hér má sjá stýrikerfi fræsisins.</p>
                             <img src="images/v6/styring.jpg" alt="" width="400" height="540">
                             <p>Þegar öllu þessu er lokið er hægt að setja fræsinn af stað.</p>
                             <img src="images/v6/fraesing.jpg" alt="" width="400" height="540">
@@ -371,6 +371,9 @@
                                 <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjal - Mót</a></li></ul>
                             <hr/>
                             <p>Hér lýkur framkvæmd verkefnisins, en gaman væri að framkvæma fræsingu og að steypa í mót við tækifæri, þar sem ekki gafst tími til þess innan áfangans.</p>
+                            <video width="500" height="300" controls>
+                            <source src="Lokaverkefni.mp4" type="video/mp4">
+                            </video>
                         </div>
                            
                             
