--- a/project6.html
+++ b/project6.html
@@ -47,6 +47,10 @@
 							<h1 class="major">Lokaverkefni</h1>
                             <p>Lokaverkefni áfangans samanstendur af því að fræsa stóran hlut úr krossvið í Shopbot fræsi og að fræsa út mót til þess að steypa hlut sem hópurinn hannar. Því miður var ekki hægt að ljúka áfanganum að fullu og var því seinni hluti verkefnisins, að steypa í mót, ekki framkvæmdur í raun en aðeins hönnunarhlutinn var kláraður. <a href="https://bjorgeva.github.io/website_project/einblodungur.pdf" >Hér</a> má sjá stutta kynningu á afurðum verkefnisins.</p>
                             <hr/>
+                            <h3>Kynningarmyndband</h3>
+                            <video width="500" height="300" controls>
+                            <source src="Lokaverkefni.mp4" type="video/mp4">
+                            </video>
                             <h3>Hópurinn</h3>
                             <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
                             <hr/>
@@ -371,9 +375,6 @@
                                 <li><a src="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">Hönnunarskjal - Mót</a></li></ul>
                             <hr/>
                             <p>Hér lýkur framkvæmd verkefnisins, en gaman væri að framkvæma fræsingu og að steypa í mót við tækifæri, þar sem ekki gafst tími til þess innan áfangans.</p>
-                            <video width="500" height="300" controls>
-                            <source src="Lokaverkefni.mp4" type="video/mp4">
-                            </video>
                         </div>
                            
                             
