--- a/project6.html
+++ b/project6.html
@@ -49,7 +49,7 @@
                             <hr/>
                             <h3>Kynningarmyndband</h3>
                             <video width="500" height="300" controls>
-                            <source src="Lokaverkefni.mp4" type="video/mp4">
+                            <source href="https://github.com/bjorgeva/website_project/Lokaverkefni.mp4" type="video/mp4">
                             </video>
                             <h3>Hópurinn</h3>
                             <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
