--- a/project6.html
+++ b/project6.html
@@ -27,12 +27,12 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="project1.html" class="active">Project 1</a></li>
+						<li><a href="project1.html">Project 1</a></li>
                         <li><a href="project2.html">Project 2</a></li>
                         <li><a href="project3.html">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
-                        <li><a href="project6">Final Project</a></li>
+                        <li><a href="project6" class="active">Final Project</a></li>
                         <li><a href="cv.html">CV</a></li>
 					</ul>
 				</nav>
@@ -51,6 +51,10 @@
                             <video width="500" height="300" controls>
                             <source src="images/Lokaverkefni.mp4" type="video/mp4">
                             </video> 
+                            <h3>Hönnunarvernd</h3>
+                            <p>Ákveðið var að hönnunarskjöl væru aðgengileg til notkunar hverjum þeim sem það vill. Þar af leiðandi má hver sá sem hleður niður skjölunum neðst á þessari síðu framleiða hlutina, afrita skjölin eða vinna með þau á annan hátt. Ef smellt er á takkann hér að neðan má sjá hönnunarverndina í fullri lengd, en þau eru MIT Licence og eru fengin <a href="https://opensource.org/licenses/MIT" >hér</a>. </p>
+                            <ul class="actions fit small">
+                                <li><a src="MIT-License.pdf" class="button primary fit" target="_blank">Hönnunarvernd: MIT Licence</a></li></ul>
                             <h3>Hópurinn</h3>
                             <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
                             <hr/>
