--- a/project4.html
+++ b/project4.html
@@ -49,7 +49,7 @@
                             Members of the group are <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.
                             <hr/>
                             <h2>The project</h2>
-							<p>The first part of the final project is to design something big and mill it with ShopBot in FabLan Reykjavík.</p>
+							<p>The first part of the final project is to design something big and mill it with ShopBot in FabLab Reykjavík.</p>
                             <h4>Table 1: My contribution</h4>
 									<div class="table-wrapper">
 										<table class="alt">
@@ -205,6 +205,7 @@
                             <br>
                             <br> And the change is visible on the page in a few moments!
                             <p>
+                            <p>Each design file was exported and added to the repository file of my website, as well as the video and the leaflet for the project. It is then made accessible with a button, like the files below, a link or with direct visibility on the website like the video. A useful page for all of this, called w3schools (which I used as a guide), can be visited by clicking <a href="https://www.w3schools.com/html/default.asp" >here.</a></p>
                             <hr/>
                             <h2>Files</h2>
                             <ul class="actions fit small">
@@ -212,7 +213,15 @@
                             <ul class="actions fit small">
                                 <li><a href="https://bjorgeva.github.io/website_project/hlidarbord.crv" class="button primary fit" target="">*.crv file for the table</a></li></ul>
                             <hr/>
-                            <p>This project as a whole was very educational and interesting and I hope the result shows that! </p>
+                            <p>This project as a whole was very educational and interesting and I hope the result shows that! Below is the introduction of the project as a whole, in Icelandic, in the form of a video and a leaflet.</p>
+                            <h3>Video</h3>
+                            <video width="500" height="300" controls>
+                            <source src="images/Lokaverkefni.mp4" type="video/mp4">
+                            </video> 
+                            <br>
+                            <br>
+                            <h3>Leaflet</h3>
+                            <img src="images/einblodungur.png" width="700px" height="900px" type=pdf>
 						</div>
 					</section>
 
