--- a/project5.html
+++ b/project5.html
@@ -91,10 +91,11 @@
                             <h2>Finding inspiration</h2>
                             <p>The group wanted to make a small item to store on the table made in part 1 of the final project, that was also useful. The result is a candle holder.</p>
                             <p>Searchwords used: <i>Candle sizes, candle holder</i>.</p>
+                            <hr/>
                             <h2>Designing and drawing the candle holder</h2>
-                            <p>The original idea and design was a tealight holder, but due to difficulties in drawing the cast another design was made. Below is the first design. </p>
+                            <p>The original idea and design was a tealight holder, but due to difficulties in drawing the cast and having enough space hollowed out to fit the tealight, another design was made. Below the first design is shown. </p>
                             <img src="images/v6/kertastjakikula.png" alt="" width="450" height="400">
-                            <p> The drawing of the first design was similar to the latter, but a bit more time consuming. A simpler design, that is also more symmetrical, was made and the process is described below:</p>
+                            <p> The drawing of the first design in Fusion360 was similar to the latter, but a bit more time consuming. A simpler design, that is also more symmetrical, was made and the process is described below:</p>
                             <p>The first step is drawing a simple rectangle in Fusion 360, it is then extruded to make a cube.</p>
                             <img src="images/v6/kertakubbur.png" alt="" width="500" height="400">
                             <p>The next step is to make a hole on the top of the cude, with a 2,5cm diameter an depth of 3cm. This will be where the candle is placed.</p>
@@ -121,12 +122,22 @@
                             <br>
                             <br> And the change is visible on the page in a few moments!
                             <p>
+                            <p>Each design file was exported and added to the repository file of my website, as well as the video and the leaflet for the project. It is then made accessible with a button, like the files below, a link or with direct visibility on the website like the video. A useful page for all of this, called w3schools (which I used as a guide), can be visited by clicking <a href="https://www.w3schools.com/html/default.asp" >here.</a></p>
                             <hr/>
                             <h2>Files</h2>
                             <ul class="actions fit small">
                                 <li><a href="https://bjorgeva.github.io/website_project/kertastjaki-final.dxf" class="button primary fit" target="">*.dxf file for the candle holder</a></li></ul>
                             <hr/>
                             <p>This project as a whole was very educational and interesting and I hope the result shows that, even though (as stated on the final project site) we did not get the chance to finish milling and casting the candle holder. </p>
+                            <p>Below is the introduction of the project as a whole, in Icelandic, in the form of a video and a leaflet.</p>
+                            <h3>Video</h3>
+                            <video width="500" height="300" controls>
+                            <source src="images/Lokaverkefni.mp4" type="video/mp4">
+                            </video> 
+                            <br>
+                            <br>
+                            <h3>Leaflet</h3>
+                            <img src="images/einblodungur.png" width="700px" height="900px" type=pdf>
 						</div>
 					</section>
 
