--- a/project5.html
+++ b/project5.html
@@ -45,7 +45,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">My contribution to part 2 of the final project</h1>
-                            <h3>The group</h3>
+                            <h2>Introduction</h2>
+                            <p>This project is a part of VÉL403G, a course at the University of Iceland, spring semester 2021. The course is tought by Hafliði Ásgeirsson.</p>
+                            <h2>The group</h2>
                             Members of the group are <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.
                             <hr/>
                             <h2>The project</h2>
@@ -90,7 +92,7 @@
                             <hr/>
                             <h2>Finding inspiration</h2>
                             <p>The group wanted to make a small item to store on the table made in part 1 of the final project, that was also useful. The result is a candle holder.</p>
-                            <p>Searchwords used: <i>Candle sizes, candle holder</i>.</p>
+                            <p>Searchwords used: <i>Candle sizes, candle holder, html</i>.</p>
                             <hr/>
                             <h2>Designing and drawing the candle holder</h2>
                             <p>The original idea and design was a tealight holder, but due to difficulties in drawing the cast and having enough space hollowed out to fit the tealight, another design was made. Below the first design is shown. </p>
