--- a/project4.html
+++ b/project4.html
@@ -45,7 +45,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">My contribution to part 1 of the final project</h1>
-                            <h3>The group</h3>
+                            <h2>Introduction</h2>
+                            <p>This project is a part of VÉL403G, a course at the University of Iceland, spring semester 2021. The course is tought by Hafliði Ásgeirsson.</p>
+                            <h2>The group</h2>
                             Members of the group are <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.
                             <hr/>
                             <h2>The project</h2>
