--- a/project6.html
+++ b/project6.html
@@ -45,8 +45,11 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Lokaverkefni</h1>
+                            <h2>Verkefnið</h2>
+                            <p>Þetta verkefni er hluti af áfanganum Framleiðsluferli - VÉL403G, sem kenndur er við Háskóla Íslands, vorönn 2021. Kennari áfangans er Hafliði Ásgeirsson.</p>
                             <p>Lokaverkefni áfangans samanstendur af því að fræsa stóran hlut úr krossvið í Shopbot fræsi og að fræsa út mót til þess að steypa hlut sem hópurinn hannar. Því miður var ekki hægt að ljúka áfanganum að fullu og var því seinni hluti verkefnisins, að steypa í mót, ekki framkvæmdur í raun en aðeins hönnunarhlutinn var kláraður. <a href="https://bjorgeva.github.io/website_project/einblodungur.pdf" >Hér</a> má sjá stutta kynningu á afurðum verkefnisins.</p>
-                            <hr/>
+                            <h3>Hópurinn</h3>
+                            <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
                             <h3>Kynningarmyndband</h3>
                             <video width="500" height="300" controls>
                             <source src="images/Lokaverkefni.mp4" type="video/mp4">
@@ -55,8 +58,6 @@
                             <p>Ákveðið var að hönnunarskjöl væru aðgengileg til notkunar hverjum þeim sem það vill. Þar af leiðandi má hver sá sem hleður niður skjölunum neðst á þessari síðu framleiða hlutina, afrita skjölin eða vinna með þau á annan hátt. Ef smellt er á takkann hér að neðan má sjá hönnunarverndina í fullri lengd, en þau eru MIT Licence og eru fengin <a href="https://opensource.org/licenses/MIT" >hér</a>. </p>
                             <ul class="actions fit small">
                                 <li><a src="MIT-License.pdf" class="button primary fit" target="_blank">Hönnunarvernd: MIT Licence</a></li></ul>
-                            <h3>Hópurinn</h3>
-                            <p>Meðlimir hópsins eru <a href="https://ado15.github.io/Heimasida" >Andri Dagur Ófeigsson</a>, <a href="https://bjorgeva.github.io/website_project" >Björg Eva Steinþórsdóttir</a> og <a href="https://www.thingiverse.com/thing:2854597/files" >Guðrún Karitas Blomsterberg</a>.</p>
                             <hr/>
                             <h4>Tafla 1: Vinnuframlag - Að fræsa eitthvað stórt</h4>
 									<div class="table-wrapper">
@@ -195,7 +196,7 @@
                             <h2>Hugmyndavinna lokaverkefnis</h2>
                             <p>Hópurinn ákvað að hanna og fræsa einhverskonar húsgagn, ásamt skrautmun. Leitað var á netinu að hugmyndum og önnur Fablab verkefni skoðuð. Niðurstaðan var sú að hanna einhverskonar hliðarborð með tveimur hillum. Skrautmunurinn sem ákveðið var að hanna og steypa er einfaldur kertastjaki. Fyrirmynd verkefnisins er borð frá merkinu Norman Copenhagen sem fæst í Epal. En kertastjakinn hefur ekki sérstaka fyrirmynd. </p>
                             <img src="images/v5/inspo.png" alt="" width="300" height="310">
-                            <p>Leitarorð notuð við hugmyndavinnu og framkvæmd: <i>fablab furniture, diy furniture, side table, vagn húsgögn, sófaborð, candle sizes.</i>.</p>
+                            <p>Leitarorð notuð við hugmyndavinnu og framkvæmd: <i>fablab furniture, diy furniture, side table, vagn húsgögn, sófaborð, candle sizes, html.</i>.</p>
                             <hr/>
                             <h2>Hönnun hliðarborðs</h2>
                             <p>Byrjað var á að áætla stærð hlutarins og í framhaldi teiknaðar upp hugmyndir að pörtunum sem þarf í verkefnið. </p>
