--- a/project2.html
+++ b/project2.html
@@ -27,8 +27,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="project1.html" class="active">Project 1</a></li>
-                        <li><a href="project2.html">Project 2</a></li>
+						<li><a href="project1.html">Project 1</a></li>
+                        <li><a href="project2.html" class="active">Project 2</a></li>
                         <li><a href="project3.html">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
@@ -45,6 +45,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Laser-cut project</h1>
+                            <h2>Introduction</h2>
+                            <p>This project is a part of VÉL403G, a course at the University of Iceland, spring semester 2021. The course is tought by Hafliði Ásgeirsson.</p>
+                            <h2>The project</h2>
 							<p>The second individual project of the semester is to make a design in Fusion360, or similar, on a DXF format and cut with a laser cutter. One demand of the project is that the design is pressfit and has finger joints. A small group project, finding the kerf for the laser-cutter used for the individual project, is included in the design chapter.</p>
                             <h4>Table 1: Workload</h4>
 									<div class="table-wrapper">
