--- a/project3.html
+++ b/project3.html
@@ -27,9 +27,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="project1.html" class="active">Project 1</a></li>
+						<li><a href="project1.html">Project 1</a></li>
                         <li><a href="project2.html">Project 2</a></li>
-                        <li><a href="project3.html">Project 3</a></li>
+                        <li><a href="project3.html" class="active">Project 3</a></li>
                         <li><a href="project4">Project 4</a></li>
                         <li><a href="project5">Project 5</a></li>
                         <li><a href="project6">Final Project</a></li>
@@ -45,7 +45,10 @@
 										<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">3D printing and scanning project</h1>
-							<p>The third individual project of the semester is to design and print an object in 3D that can not be made by cutting. Additionally, scanning any object in 3D is a part of the project. A small group project, finding the restrictions of the 3D printer used for the individual project is included in the design chapter. </p>
+							<h2>Introduction</h2>
+                            <p>This project is a part of VÉL403G, a course at the University of Iceland, spring semester 2021. The course is tought by Hafliði Ásgeirsson.</p>
+                            <h2>The project</h2>
+                            <p>The third individual project of the semester is to design and print an object in 3D that can not be made by cutting. Additionally, scanning any object in 3D is a part of the project. A small group project, finding the restrictions of the 3D printer used for the individual project is included in the design chapter. </p>
                             <h4>Table 1: Workload</h4>
 									<div class="table-wrapper">
 										<table class="alt">
