--- a/project4.html
+++ b/project4.html
@@ -187,13 +187,14 @@
                             <img src="images/v6/fraesing.jpg" alt="" width="400" height="540">
                             <hr/>
                             <h2>Constructing the sidetable</h2>
-                            <p>Before constructing the table, the components had to be sanded. We soon realized that some errors had been made while drawing and the nail mounts did not fit the holes on the legs, and the finger joints were rather tight. The solution was to saw off a bit of the finger joints and to skip the use of the nail mounts, as the holes an the two shelves were tight enought for the shelves to stay in place without them. </p>
+                            <p>Before constructing the table, the components had to be sanded. We soon realized that some errors had been made while drawing and the nail mounts did not fit the holes on the legs, and the finger joints were rather tight. The solution was to saw off a bit of the finger joints and to skip the use of the nail mounts, as the leg-holes on the shelves were tight enought for the shelves to stay in place without them. </p>
                             <img src="images/v6/sog.jpg" alt="" width="400" height="540">
                             <p>The components were put together with a hammer, as some force was needed to make them fit.</p>
                             <img src="images/v6/tol.jpg" alt="" width="400" height="540">
                             <p>The construction came together in the end, and the end result was great!</p>
-                            <img src="images/v6/hlidarbord.jpg" alt="" width="400" height="540">
+                            <img src="images/v6/hlidarbord.jpg" alt="" width="460" height="500">
                             <p><a href="https://bjorgeva.github.io/website_project/project6.html" >Here the Final Project page can be accessed</a> and there the whole process is listed, for those interested. </p>
+                            <hr/>
                             <h2>Documentation and website programming</h2>
                             <p>My main responsibility was to document the process of the project and putting it up on the <a href="https://bjorgeva.github.io/website_project/project6.html" >Final Project site</a>. My goal was to make the website organized and accessible for those who visit. Documenting all the parts of the project required following along the other group members' work and was quite time consuming, but gave me a better insight to all parts of the project which is always good.</p>
                             <p>The site for the Final Project is set up as a tab on my website, and how it was made is shown in detail in <a href="https://bjorgeva.github.io/website_project/project1.html" >Project 1 - Making a website</a>. A new *.html file was saved in the repository folder and every time a change was implemented the website was updated as follows.<br>
@@ -223,7 +224,7 @@
                             <br>
                             <br>
                             <h3>Leaflet</h3>
-                            <img src="images/einblodungur.png" width="700px" height="900px" type=pdf>
+                            <img src="images/einblodungur.png" width="650px" height="900px" type=pdf>
 						</div>
 					</section>
 
